--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+body
+    margin: 0
+
+input
+  flex: 1
+  padding: 10px
+  border: 1px solid #ccc
+  border-radius: 5px
+  font-size: 1rem
+
+// Scrollbar styling
+::-webkit-scrollbar 
+  width: 6px
+
+::-webkit-scrollbar-track 
+  background: transparent
+
+::-webkit-scrollbar-thumb 
+  background-color: rgba(255, 255, 255, 0.2)
+  border-radius: 3px
